# GNL

./: CMakeLists.txt  main.c
Inc/: get_next_line..h  get_next_line.h
Src/: get_next_line.c
